# corner

./: README.md
speech-opt/: .gitignore  Cargo.toml  README.md  sample.srt
speech-opt/src/: ffopt.rs  main.rs
speech-opt/src/ui/: combine_dialog.fl  loadaudio.fl  loadsubtitle.fl  mainform.fl  mainform1.fl
take-screenshots/: .gitignore  Cargo.toml  LICENSE  README.md
take-screenshots/.github/workflows/: release.yml
take-screenshots/src/: main.rs
use-gui/: Cargo.toml  README.md  build.rs  demo.slint  test.toml
use-gui/slint file/: ddt.slint  demo.slint  dot.slint  down.slint  main.slint  pp.slint  time.slint
use-gui/src/: input.rs  main copy.rs  main.rs
use-gui/ui/: editor.slint  index.slint  signal.slint  widget.slint  window.slint
