[package]
name = "take-screenshots"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
fltk = "^1.4"
directories = "4.0.1"
humantime = "2.1.0"
chrono = "0.4.23"
screenshots = "0.6.0"
tokio = { version = "1.25.0", features = ["time", "rt", "macros", "rt-multi-thread", "fs"] }
